kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-stack-release
  labels:
    environment: release
    app: realworld
